63-й день Ката. На 61-й день сдал модуль-6