@@ -1,4 +1,4 @@
-package academy.kata.educational_process.mod6.mailservice6214.v3_erik;
+package academy.kata.educational_process.mod6.mailservice6214.v6214_3_erik;
 
 import java.util.*;
 import java.util.function.Consumer;
@@ -126,14 +126,14 @@ public class Mailservice62143Erik {
         MailService<String> mailService = new MailService<>();
 
 // Обработка списка писем почтовым сервисом
-        messages.stream().forEachOrdered(mailService);
+        messages.forEach(mailService);
 
 // Получение и проверка словаря "почтового ящика",
 //   где по получателю можно получить список сообщений, которые были ему отправлены
         Map<String, List<String>> mailBox = mailService.getMailBox();
 
         assert mailBox.get("H.P. Lovecraft").equals(
-                Arrays.asList(
+                List.of(
                         "This \"The Shadow over Innsmouth\" story is real masterpiece, Howard!"
                 )
         ): "wrong mailService mailbox content (1)";
@@ -162,8 +162,8 @@ public class Mailservice62143Erik {
 // Получение и проверка словаря "почтового ящика",
 //   где по получателю можно получить список зарплат, которые были ему отправлены.
         Map<String, List<Integer>> salaries = salaryService.getMailBox();
-        assert salaries.get(salary1.getTo()).equals(Arrays.asList(1)): "wrong salaries mailbox content (1)";
-        assert salaries.get(salary2.getTo()).equals(Arrays.asList(Integer.MAX_VALUE)): "wrong salaries mailbox content (2)";
-        assert salaries.get(randomTo).equals(Arrays.asList(randomSalary)): "wrong salaries mailbox content (3)";
+        assert salaries.get(salary1.getTo()).equals(List.of(1)): "wrong salaries mailbox content (1)";
+        assert salaries.get(salary2.getTo()).equals(List.of(Integer.MAX_VALUE)): "wrong salaries mailbox content (2)";
+        assert salaries.get(randomTo).equals(List.of(randomSalary)): "wrong salaries mailbox content (3)";
     }
 }
